# scl-examples

./: README.md
bar/: README.md  bar-meta.spec  bar.spec
foo/: README.md  foo-meta.spec  foo.spec  scl-register-helper.sh
foo-src/: CMakeLists.txt  foo-daemon.init.in  foo-daemon.service.in  foo-run.sh  make_archive.sh
foo/foo-1.1/: CMakeLists.txt  foo-daemon.sh
foo42/: foo42.spec
fooplugin/: foodaemon.spec
scl-bar24/: README  scl-bar24.spec
scl-foo42/: foo42.spec  scl-foo42.spec
